--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,62 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.todo-input {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: stretch;
+  padding: 20px; 
+}
+
+input {
+  height: 40px;
+}
+
+ul {
+  padding: 20px;
+}
+
+.add-button {
+  background-color: #f44336;
+  border: none;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.text-btn {
+  background-color: white;
+  border: none;
+  margin: 0 0 0 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.text-btn-pressed {
+  font-weight: bold;
+  text-decoration: underline;
+}
+
+img {
+  max-height: 20px;
+}
+
+p {
+  margin: 0 0 20px 10px;
+  word-wrap: break-word;
+}
+
+p:hover {
+  cursor: pointer
+}
+
+.align {
+  display: flex;
+  align-items: baseline;
+  word-break: break-all;
+}
+
+@media screen and (max-width: 550px) {
+  .todo-input {
+  	display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
-  to {
-    transform: rotate(360deg);
+
+  input {
+    height: 10vw;
   }
+
 }
